update fpca references

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -493,6 +493,25 @@
   keywords = {Multivariate analysis}
 }
 
+@inbook{ramsay+silverman_2005_basisfuncexp,
+  title = {Basis function expansion of the functions},
+  booktitle = {Functional Data Analysis},
+  author = {Ramsay, James and Silverman, Bernard W.},
+  year = {2005},
+  series = {Springer {{Series}} in {{Statistics}}},
+  edition = {Second},
+  pages = {127--145},
+  publisher = {{Springer-Verlag}},
+  address = {{New York}},
+  doi = {10.1007/b98888},
+  url = {https://www.springer.com/gp/book/9780387400808},
+  urldate = {2024-10-20},
+  collaborator = {Ramsay, James and Silverman, Bernard W.},
+  isbn = {978-0-387-40080-8},
+  langid = {english},
+  keywords = {Multivariate analysis}
+}
+
 @incollection{romeo+marzoljaen_2014_analisis,
   title = {{An\'alisis del viento y la niebla en el aeropuerto de Los Rodeos (Tenerife). Cambios y tendencias}},
   booktitle = {{Cambio clim\'atico y cambio global.}},
